<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<TextView
    android:paddingTop="20dp"
    android:textSize="23sp"
    android:layout_gravity="center"
    android:text="@string/TextViewRegFormularJindraUkol4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityJmeno"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:gravity="center"
        android:hint="..."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityAdresa"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:gravity="center"
        android:hint="..."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityTelefon"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:gravity="center"
        android:hint="..."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityEmail"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:gravity="center"
        android:hint="..."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityZacatekPobytu"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <DatePicker
        android:calendarViewShown="false"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"></DatePicker>

    <TextView
        android:paddingTop="15dp"
        android:text="@string/TextViewJindraActivityPocetdnu"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Spinner
        android:id="@+id/JindraActivitySpinerPocetdni"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></Spinner>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
